<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.webersolutions.mychicagoteams.Fire"
    android:background="@drawable/firebckgrnd">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitleFire"
        android:id="@+id/txtTitle"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnSchedule"
        android:id="@+id/btnSched"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#FFE1132E"
        android:alpha=".75" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnRoster"
        android:id="@+id/btnRoster"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_below="@+id/btnSched"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="#FFE1132E"
        android:alpha=".75" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnStandings"
        android:id="@+id/btnStandings"
        android:layout_below="@+id/btnRoster"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:alpha=".75"
        android:background="#FFE1132E" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnScores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnStandings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:background="#FFE1132E"
        android:alpha=".75"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>

